create conversations file

--- a/main.ipynb
+++ b/main.ipynb
@@ -290,6 +290,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conversation 1:\n",
+      "Agent: How big do you want your house to be?\n",
+      "Buyer: A comfortable three-bedroom house with a spacious kitchen and a cozy living room.\n",
+      "Agent: What are 3 most important things for you in choosing this property?\n",
+      "Buyer: A quiet neighborhood, good local schools, and convenient shopping options.\n",
+      "Agent: Which amenities would you like?\n",
+      "Buyer: A backyard for gardening, a two-car garage, and a modern, energy-efficient heating system.\n",
+      "Agent: Which transportation options are important to you?\n",
+      "Buyer: Easy access to a reliable bus line, proximity to a major highway, and bike-friendly roads.\n",
+      "Agent: How urban do you want your neighborhood to be?\n",
+      "Buyer: A balance between suburban tranquility and access to urban amenities like restaurants and theaters.\n",
+      "---\n",
+      "Conversation 2:\n",
+      "Agent: Hello! What kind of property are you looking for today?\n",
+      "Buyer: I'm looking for a spacious suburban home for my family.\n",
+      "Agent: Great! How many bedrooms and bathrooms do you need?\n",
+      "Buyer: At least 4 bedrooms and 3 bathrooms.\n",
+      "Agent: Are there any specific amenities you want in the house?\n",
+      "Buyer: A large backyard, a garage for two cars, and a modern kitchen would be ideal.\n",
+      "Agent: What about the neighborhood? Any preferences?\n",
+      "Buyer: A safe, family-friendly area with good schools nearby.\n",
+      "Agent: Do you have a budget range in mind?\n",
+      "Buyer: Somewhere between $500,000 and $700,000.\n",
+      "---\n",
+      "Conversation 3:\n",
+      "Agent: Hi there! Are you looking for a condo or a house?\n",
+      "Buyer: I'm looking for a modern condo in the city center.\n",
+      "Agent: Do you have a preferred number of bedrooms or bathrooms?\n",
+      "Buyer: Just 1 bedroom and 1 bathroom is fine.\n",
+      "Agent: What features are most important to you?\n",
+      "Buyer: I’d like an open layout, a balcony, and access to a gym.\n",
+      "Agent: How important is public transportation to you?\n",
+      "Buyer: Very important; I want to be walking distance from the subway and bus stops.\n",
+      "Agent: Do you have a preferred budget for the condo?\n",
+      "Buyer: Up to $350,000 would be ideal.\n",
+      "Agent: Would you like any nearby amenities like cafes or grocery stores?\n",
+      "Buyer: Yes, I’d love to be close to coffee shops and a grocery store.\n",
+      "---\n",
+      "Conversation 99:\n",
+      "Buyer: Hi, I am looking for a 3-bedroom house.\n",
+      "Agent: Sure! What area are you interested in?\n",
+      "Buyer: Somewhere close to good schools and parks.\n",
+      "Agent: Great, I have a few listings in mind.\n",
+      "---\n",
+      "Conversation 100:\n",
+      "Buyer: I prefer a modern condo downtown.\n",
+      "Agent: Understood. What is your budget?\n",
+      "---\n"
+     ]
+    }
+   ],
+   "source": [
+    "# path = Path(\"conversations.json\")\n",
+    "\n",
+    "conv_json_path = current_dir / \"conversations.json\"\n",
+    "with conv_json_path.open(\"r\", encoding=\"utf-8\") as f:\n",
+    "    conversations = json.load(f)\n",
+    "\n",
+    "for conv in conversations:\n",
+    "    print(f\"Conversation {conv['conversation_id']}:\")\n",
+    "    for msg in conv[\"messages\"]:\n",
+    "        print(f\"{msg['role'].capitalize()}: {msg['text']}\")\n",
+    "    print(\"---\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
