create query_text and filters

--- a/main.ipynb
+++ b/main.ipynb
@@ -453,7 +453,7 @@
     "    \n",
     "    # Lifestyle & location\n",
     "    amenities: List[str] = []\n",
-    "    furnished_required: bool = False\n",
+    "    furnished: bool = False\n",
     "    location: Optional[str]\n",
     "    neighborhood_features: List[str] = []\n",
     "    transportation: List[str] = []\n",
@@ -538,31 +538,64 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "# Get the current date and time, and then extract the year attribute\n",
+    "current_year = datetime.now().year\n",
+    "print(current_year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "content_dict['property_type']\n",
-    "content_dict['amenities']\n",
-    "content_dict['furnished']\n",
-    "content_dict['location']\n",
-    "content_dict['neighborhood_features']\n",
-    "content_dict['transportation']\n",
-    "content_dict['parking_required']\n",
-    "content_dict['pet_friendly']\n",
-    "\n",
-    "query_text = ...\n",
+    "property_type = content_dict['property_type']\n",
+    "amenities = content_dict['amenities']\n",
+    "furnished = content_dict['furnished']\n",
+    "location = content_dict['location']\n",
+    "neighborhood_features = content_dict['neighborhood_features']\n",
+    "transportation = content_dict['transportation']\n",
+    "parking_required = content_dict['parking_required']\n",
+    "pet_friendly = content_dict['pet_friendly_required']\n",
     "\n",
     "\n",
-    "content_dict['bedrooms']\n",
-    "content_dict['bathrooms']\n",
-    "content_dict['min_budget']\n",
-    "content_dict['max_budget']\n",
-    "content_dict['area_min_sqft']\n",
-    "content_dict['area_max_sqft']\n",
-    "content_dict['building_max_age']\n",
-    "content_dict['building_min_year']\n",
+    "# Build bullet points\n",
+    "query_text = f\"\"\"\n",
+    "- Property type: {property_type}\n",
+    "- Amenities: {', '.join(amenities) if amenities else 'Any'}\n",
+    "- Furnished: {\"Yes\" if furnished else \"No\"}\n",
+    "- Location: {location or \"Any\"}\n",
+    "- Neighborhood features: {', '.join(neighborhood_features) if neighborhood_features else \"Any\"}\n",
+    "- Transportation preferences: {', '.join(transportation) if transportation else \"Any\"}\n",
+    "- Parking required: {\"Yes\" if parking_required else \"No\"}\n",
+    "- Pet friendly required: {\"Yes\" if pet_friendly else \"No\"}\n",
+    "\"\"\"\n",
     "\n",
+    "### TODO: Handle the case of no value!\n",
+    "n_bedroom = content_dict['bedrooms']\n",
+    "n_bathroom = content_dict['bathrooms']\n",
+    "min_budget, max_budget = content_dict['min_budget'], content_dict['max_budget']\n",
+    "min_area, max_area = content_dict['area_min_sqft'], content_dict['area_max_sqft']\n",
+    "building_max_age = content_dict['building_max_age']\n",
+    "building_min_year = content_dict['building_min_year']\n",
     "\n",
-    "\n",
+    "bedroom_conditions = ({\"bedrooms\": n_bedroom}, )\n",
+    "bathrooms_conditions = ({\"bathrooms\": {\"$gte\": n_bathroom - 1}}, {\"bathrooms\": {\"$lte\": n_bathroom + 1}})\n",
+    "budget_conditions = ({\"price\": {\"$gte\": min_budget}}, {\"bathrooms\": {\"$lte\": max_budget}})\n",
+    "area_conditions = ({\"area_sqft\": {\"$gte\": min_area}}, {\"area_sqft\": {\"$lte\": max_area}})\n",
+    "year_conditions = ({\"year_built\": {\"$gte\": building_min_year}}, {\"year_built\": {\"$gte\": current_year - building_max_age}})\n",
     "\n",
     "\n",
     "{'bedrooms': 4,\n",
@@ -585,15 +618,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'ids': ['6', '9', '13', '14', '16', '18', '20'], 'embeddings': None, 'documents': ['Charming 1-Bedroom Bungalow. This classic 1-bedroom, 1-bathroom bungalow features an updated kitchen with modern appliances, hardwood floors throughout, and a cozy living room with plenty of natural light. The private patio offers an ideal space for outdoor relaxation and entertaining. This home blends traditional charm with contemporary updates, making it a perfect retreat. Neighborhood info: Located in a peaceful residential area of Portland, OR, this bungalow is close to local cafes, parks, and public transportation. The quiet neighborhood offers a suburban vibe while still being within reach of the city’s vibrant downtown.. Location: Portland, OR, Neighborhood: Residential. Type: House, Bedrooms: 1, Bathrooms: 1.0, Area: 750 sqft, Year built: 1940, Price: $275000.', 'Compact 1-Bedroom Apartment in Historic Building. This quaint 1-bedroom, 1-bathroom apartment offers vintage charm combined with modern upgrades. The apartment features exposed brick walls, hardwood floors, and a fully renovated kitchen with stainless steel appliances. It is perfect for those looking for a cozy living space with character. Neighborhood info: Situated in a historic district of Boston, MA, this apartment is surrounded by charming architecture, local cafes, and shops. The neighborhood is vibrant, with easy access to public transportation and close proximity to cultural attractions like museums and theaters.. Location: Boston, MA, Neighborhood: Historic District. Type: Apartment, Bedrooms: 1, Bathrooms: 1.0, Area: 600 sqft, Year built: 1900, Price: $210000.', 'Cozy 2-Bedroom Cottage in the Countryside. This charming 2-bedroom, 1-bathroom cottage is perfect for those looking to escape the hustle and bustle of city life. The home features a traditional stone fireplace, a cozy living room, and a country-style kitchen with vintage fixtures. The expansive backyard provides space for gardening and outdoor gatherings. Neighborhood info: Located in a serene countryside setting just outside of Asheville, NC, this cottage offers peace and privacy. The neighborhood is known for its beautiful rolling hills, local farms, and hiking trails, making it a perfect location for nature lovers.. Location: Asheville, NC, Neighborhood: Countryside. Type: Cottage, Bedrooms: 2, Bathrooms: 1.0, Area: 950 sqft, Year built: 1950, Price: $350000.', 'Stylish 1-Bedroom Condo with City Views. This chic 1-bedroom, 1-bathroom condo offers sweeping views of the city skyline from its floor-to-ceiling windows. The open-plan living area includes a modern kitchen with sleek appliances and a breakfast bar. The bedroom has ample closet space, while the bathroom features elegant finishes and a walk-in shower. Neighborhood info: Located in the heart of downtown Seattle, WA, this condo is close to major office buildings, shopping districts, and public transit options. The neighborhood offers a perfect urban lifestyle, with restaurants, entertainment venues, and parks just minutes away.. Location: Seattle, WA, Neighborhood: Downtown. Type: Condo, Bedrooms: 1, Bathrooms: 1.0, Area: 750 sqft, Year built: 2017, Price: $550000.', 'Affordable 2-Bedroom Mobile Home in Quiet Rural Area. This 2-bedroom, 1-bathroom mobile home offers a comfortable living space with a cozy living room, functional kitchen, and a large backyard perfect for outdoor activities. While compact, the home provides a peaceful and private environment for those seeking a simple, affordable lifestyle. Neighborhood info: Located in a peaceful rural area of eastern Oregon, this mobile home offers the perfect escape from city life. The neighborhood is quiet and ideal for those who enjoy country living, with scenic views of rolling hills and wide-open spaces.. Location: Baker City, OR, Neighborhood: Rural Area. Type: Mobile Home, Bedrooms: 2, Bathrooms: 1.0, Area: 600 sqft, Year built: 1995, Price: $85000.', 'Charming 1-Bedroom Cottage in Secluded Forest. This one-bedroom, one-bathroom cottage is perfect for those seeking a peaceful, secluded retreat. The home features a cozy interior with wood accents, a small but functional kitchen, and a living room with a fireplace. A private deck overlooks a tranquil forest, offering total privacy and serenity. Neighborhood info: Nestled deep in the forests of the Adirondacks in upstate New York, this cottage provides a quiet escape from the hustle and bustle. Surrounded by nature, the neighborhood is perfect for outdoor enthusiasts who love hiking, birdwatching, and fishing.. Location: Lake Placid, NY, Neighborhood: Secluded Forest. Type: Cottage, Bedrooms: 1, Bathrooms: 1.0, Area: 800 sqft, Year built: 1965, Price: $125000.', 'Budget-Friendly 2-Bedroom Apartment in Suburban Area. This 2-bedroom, 1-bathroom apartment is an affordable option for those looking to own property in a suburban area. The unit offers a functional layout with a large living room, kitchen with basic appliances, and two comfortable bedrooms. Perfect for first-time homebuyers or those on a budget. Neighborhood info: Located in the suburban neighborhood of Toledo, Ohio, this apartment provides easy access to local shops, schools, and parks. The quiet and safe environment is ideal for young families or anyone looking for an affordable place to live near the city center.. Location: Toledo, OH, Neighborhood: Suburban Area. Type: Apartment, Bedrooms: 2, Bathrooms: 1.0, Area: 800 sqft, Year built: 1990, Price: $65000.'], 'uris': None, 'included': ['metadatas', 'documents'], 'data': None, 'metadatas': [{'bedrooms': 1, 'price': 275000, 'bathrooms': 1.0, 'property_type': 'House', 'id': 6, 'year_built': 1940, 'neighborhood': 'Residential', 'location': 'Portland, OR', 'listed_date': '2025-03-22', 'area_sqft': 750}, {'neighborhood': 'Historic District', 'bathrooms': 1.0, 'listed_date': '2025-03-31', 'bedrooms': 1, 'area_sqft': 600, 'property_type': 'Apartment', 'year_built': 1900, 'location': 'Boston, MA', 'price': 210000, 'id': 9}, {'year_built': 1950, 'area_sqft': 950, 'id': 13, 'listed_date': '2025-04-07', 'property_type': 'Cottage', 'neighborhood': 'Countryside', 'bedrooms': 2, 'price': 350000, 'location': 'Asheville, NC', 'bathrooms': 1.0}, {'area_sqft': 750, 'price': 550000, 'property_type': 'Condo', 'year_built': 2017, 'bedrooms': 1, 'bathrooms': 1.0, 'location': 'Seattle, WA', 'id': 14, 'neighborhood': 'Downtown', 'listed_date': '2025-04-08'}, {'neighborhood': 'Rural Area', 'location': 'Baker City, OR', 'area_sqft': 600, 'year_built': 1995, 'bathrooms': 1.0, 'property_type': 'Mobile Home', 'bedrooms': 2, 'price': 85000, 'listed_date': '2025-04-10', 'id': 16}, {'neighborhood': 'Secluded Forest', 'bathrooms': 1.0, 'property_type': 'Cottage', 'location': 'Lake Placid, NY', 'price': 125000, 'listed_date': '2025-04-12', 'id': 18, 'area_sqft': 800, 'year_built': 1965, 'bedrooms': 1}, {'listed_date': '2025-04-14', 'area_sqft': 800, 'id': 20, 'bathrooms': 1.0, 'year_built': 1990, 'price': 65000, 'neighborhood': 'Suburban Area', 'property_type': 'Apartment', 'bedrooms': 2, 'location': 'Toledo, OH'}]}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'ids': ['6', '9', '13', '14', '16', '18', '20'],\n",
+       " 'embeddings': None,\n",
+       " 'documents': ['Charming 1-Bedroom Bungalow. This classic 1-bedroom, 1-bathroom bungalow features an updated kitchen with modern appliances, hardwood floors throughout, and a cozy living room with plenty of natural light. The private patio offers an ideal space for outdoor relaxation and entertaining. This home blends traditional charm with contemporary updates, making it a perfect retreat. Neighborhood info: Located in a peaceful residential area of Portland, OR, this bungalow is close to local cafes, parks, and public transportation. The quiet neighborhood offers a suburban vibe while still being within reach of the city’s vibrant downtown.. Location: Portland, OR, Neighborhood: Residential. Type: House, Bedrooms: 1, Bathrooms: 1.0, Area: 750 sqft, Year built: 1940, Price: $275000.',\n",
+       "  'Compact 1-Bedroom Apartment in Historic Building. This quaint 1-bedroom, 1-bathroom apartment offers vintage charm combined with modern upgrades. The apartment features exposed brick walls, hardwood floors, and a fully renovated kitchen with stainless steel appliances. It is perfect for those looking for a cozy living space with character. Neighborhood info: Situated in a historic district of Boston, MA, this apartment is surrounded by charming architecture, local cafes, and shops. The neighborhood is vibrant, with easy access to public transportation and close proximity to cultural attractions like museums and theaters.. Location: Boston, MA, Neighborhood: Historic District. Type: Apartment, Bedrooms: 1, Bathrooms: 1.0, Area: 600 sqft, Year built: 1900, Price: $210000.',\n",
+       "  'Cozy 2-Bedroom Cottage in the Countryside. This charming 2-bedroom, 1-bathroom cottage is perfect for those looking to escape the hustle and bustle of city life. The home features a traditional stone fireplace, a cozy living room, and a country-style kitchen with vintage fixtures. The expansive backyard provides space for gardening and outdoor gatherings. Neighborhood info: Located in a serene countryside setting just outside of Asheville, NC, this cottage offers peace and privacy. The neighborhood is known for its beautiful rolling hills, local farms, and hiking trails, making it a perfect location for nature lovers.. Location: Asheville, NC, Neighborhood: Countryside. Type: Cottage, Bedrooms: 2, Bathrooms: 1.0, Area: 950 sqft, Year built: 1950, Price: $350000.',\n",
+       "  'Stylish 1-Bedroom Condo with City Views. This chic 1-bedroom, 1-bathroom condo offers sweeping views of the city skyline from its floor-to-ceiling windows. The open-plan living area includes a modern kitchen with sleek appliances and a breakfast bar. The bedroom has ample closet space, while the bathroom features elegant finishes and a walk-in shower. Neighborhood info: Located in the heart of downtown Seattle, WA, this condo is close to major office buildings, shopping districts, and public transit options. The neighborhood offers a perfect urban lifestyle, with restaurants, entertainment venues, and parks just minutes away.. Location: Seattle, WA, Neighborhood: Downtown. Type: Condo, Bedrooms: 1, Bathrooms: 1.0, Area: 750 sqft, Year built: 2017, Price: $550000.',\n",
+       "  'Affordable 2-Bedroom Mobile Home in Quiet Rural Area. This 2-bedroom, 1-bathroom mobile home offers a comfortable living space with a cozy living room, functional kitchen, and a large backyard perfect for outdoor activities. While compact, the home provides a peaceful and private environment for those seeking a simple, affordable lifestyle. Neighborhood info: Located in a peaceful rural area of eastern Oregon, this mobile home offers the perfect escape from city life. The neighborhood is quiet and ideal for those who enjoy country living, with scenic views of rolling hills and wide-open spaces.. Location: Baker City, OR, Neighborhood: Rural Area. Type: Mobile Home, Bedrooms: 2, Bathrooms: 1.0, Area: 600 sqft, Year built: 1995, Price: $85000.',\n",
+       "  'Charming 1-Bedroom Cottage in Secluded Forest. This one-bedroom, one-bathroom cottage is perfect for those seeking a peaceful, secluded retreat. The home features a cozy interior with wood accents, a small but functional kitchen, and a living room with a fireplace. A private deck overlooks a tranquil forest, offering total privacy and serenity. Neighborhood info: Nestled deep in the forests of the Adirondacks in upstate New York, this cottage provides a quiet escape from the hustle and bustle. Surrounded by nature, the neighborhood is perfect for outdoor enthusiasts who love hiking, birdwatching, and fishing.. Location: Lake Placid, NY, Neighborhood: Secluded Forest. Type: Cottage, Bedrooms: 1, Bathrooms: 1.0, Area: 800 sqft, Year built: 1965, Price: $125000.',\n",
+       "  'Budget-Friendly 2-Bedroom Apartment in Suburban Area. This 2-bedroom, 1-bathroom apartment is an affordable option for those looking to own property in a suburban area. The unit offers a functional layout with a large living room, kitchen with basic appliances, and two comfortable bedrooms. Perfect for first-time homebuyers or those on a budget. Neighborhood info: Located in the suburban neighborhood of Toledo, Ohio, this apartment provides easy access to local shops, schools, and parks. The quiet and safe environment is ideal for young families or anyone looking for an affordable place to live near the city center.. Location: Toledo, OH, Neighborhood: Suburban Area. Type: Apartment, Bedrooms: 2, Bathrooms: 1.0, Area: 800 sqft, Year built: 1990, Price: $65000.'],\n",
+       " 'uris': None,\n",
+       " 'included': ['metadatas', 'documents'],\n",
+       " 'data': None,\n",
+       " 'metadatas': [{'year_built': 1940,\n",
+       "   'bedrooms': 1,\n",
+       "   'id': 6,\n",
+       "   'neighborhood': 'Residential',\n",
+       "   'location': 'Portland, OR',\n",
+       "   'listed_date': '2025-03-22',\n",
+       "   'price': 275000,\n",
+       "   'bathrooms': 1.0,\n",
+       "   'property_type': 'House',\n",
+       "   'area_sqft': 750},\n",
+       "  {'bedrooms': 1,\n",
+       "   'property_type': 'Apartment',\n",
+       "   'location': 'Boston, MA',\n",
+       "   'id': 9,\n",
+       "   'neighborhood': 'Historic District',\n",
+       "   'year_built': 1900,\n",
+       "   'bathrooms': 1.0,\n",
+       "   'area_sqft': 600,\n",
+       "   'listed_date': '2025-03-31',\n",
+       "   'price': 210000},\n",
+       "  {'id': 13,\n",
+       "   'location': 'Asheville, NC',\n",
+       "   'area_sqft': 950,\n",
+       "   'property_type': 'Cottage',\n",
+       "   'listed_date': '2025-04-07',\n",
+       "   'neighborhood': 'Countryside',\n",
+       "   'price': 350000,\n",
+       "   'bedrooms': 2,\n",
+       "   'bathrooms': 1.0,\n",
+       "   'year_built': 1950},\n",
+       "  {'neighborhood': 'Downtown',\n",
+       "   'bedrooms': 1,\n",
+       "   'area_sqft': 750,\n",
+       "   'property_type': 'Condo',\n",
+       "   'year_built': 2017,\n",
+       "   'bathrooms': 1.0,\n",
+       "   'listed_date': '2025-04-08',\n",
+       "   'price': 550000,\n",
+       "   'location': 'Seattle, WA',\n",
+       "   'id': 14},\n",
+       "  {'id': 16,\n",
+       "   'listed_date': '2025-04-10',\n",
+       "   'location': 'Baker City, OR',\n",
+       "   'year_built': 1995,\n",
+       "   'bathrooms': 1.0,\n",
+       "   'bedrooms': 2,\n",
+       "   'property_type': 'Mobile Home',\n",
+       "   'area_sqft': 600,\n",
+       "   'price': 85000,\n",
+       "   'neighborhood': 'Rural Area'},\n",
+       "  {'bedrooms': 1,\n",
+       "   'bathrooms': 1.0,\n",
+       "   'listed_date': '2025-04-12',\n",
+       "   'neighborhood': 'Secluded Forest',\n",
+       "   'location': 'Lake Placid, NY',\n",
+       "   'price': 125000,\n",
+       "   'property_type': 'Cottage',\n",
+       "   'year_built': 1965,\n",
+       "   'id': 18,\n",
+       "   'area_sqft': 800},\n",
+       "  {'neighborhood': 'Suburban Area',\n",
+       "   'property_type': 'Apartment',\n",
+       "   'bathrooms': 1.0,\n",
+       "   'bedrooms': 2,\n",
+       "   'price': 65000,\n",
+       "   'listed_date': '2025-04-14',\n",
+       "   'location': 'Toledo, OH',\n",
+       "   'year_built': 1990,\n",
+       "   'id': 20,\n",
+       "   'area_sqft': 800}]}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -611,7 +727,7 @@
     "    },\n",
     ")\n",
     "\n",
-    "print(outputs)"
+    "display(outputs)"
    ]
   },
   {
