--- a/main.ipynb
+++ b/main.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -189,40 +189,60 @@
     }
    ],
    "source": [
+    "DOCUMENT_FORMAT = (\n",
+    "    \"{title}. {description} \"\n",
+    "    \"Neighborhood info: {neighborhood_description}. \"\n",
+    "    \"Location: {location}, Neighborhood: {neighborhood}. \"\n",
+    "    \"Type: {property_type}, Bedrooms: {bedrooms}, \"\n",
+    "    \"Bathrooms: {bathrooms}, Area: {area_sqft} sqft, \"\n",
+    "    \"Year built: {year_built}, Price: ${price}.\"\n",
+    ")\n",
+    "\n",
     "ids = [str(listing[\"id\"]) for listing in real_estate_listings]\n",
     "\n",
-    "# Construct the document string\n",
     "documents = [\n",
-    "    f\"{listing['title']}. {listing['description']} \"\n",
-    "    f\"Neighborhood info: {listing['neighborhood_description']}. \"\n",
-    "    f\"Location: {listing['location']}, Neighborhood: {listing['neighborhood']}. \"\n",
-    "    f\"Type: {listing['property_type']}, Bedrooms: {listing['bedrooms']}, \"\n",
-    "    f\"Bathrooms: {listing['bathrooms']}, Area: {listing['area_sqft']} sqft, \"\n",
-    "    f\"Year built: {listing['year_built']}, Price: ${listing['price']}.\"\n",
+    "    DOCUMENT_FORMAT.format(**listing) \n",
     "    for listing in real_estate_listings\n",
     "]\n",
     "\n",
-    "metadatas = [\n",
-    "    {\n",
-    "        \"id\": listing[\"id\"],\n",
-    "        \"location\": listing[\"location\"],\n",
-    "        \"neighborhood\": listing[\"neighborhood\"],\n",
-    "        \"property_type\": listing[\"property_type\"],\n",
-    "        \"year_built\": listing[\"year_built\"],\n",
-    "        \"price\": listing[\"price\"],\n",
-    "        \"bedrooms\": listing[\"bedrooms\"],\n",
-    "        \"bathrooms\": listing[\"bathrooms\"],\n",
-    "        \"area_sqft\": listing[\"area_sqft\"],\n",
-    "        \"listed_date\": listing[\"listed_date\"]\n",
-    "    } for listing in real_estate_listings\n",
-    "]\n",
+    "import copy\n",
+    "\n",
+    "metadatas = copy.deepcopy(real_estate_listings)\n",
+    "\n",
+    "# # Construct the document string\n",
+    "# documents = [\n",
+    "#     f\"{listing['title']}. {listing['description']} \"\n",
+    "#     f\"Neighborhood info: {listing['neighborhood_description']}. \"\n",
+    "#     f\"Location: {listing['location']}, Neighborhood: {listing['neighborhood']}. \"\n",
+    "#     f\"Type: {listing['property_type']}, Bedrooms: {listing['bedrooms']}, \"\n",
+    "#     f\"Bathrooms: {listing['bathrooms']}, Area: {listing['area_sqft']} sqft, \"\n",
+    "#     f\"Year built: {listing['year_built']}, Price: ${listing['price']}.\"\n",
+    "#     for listing in real_estate_listings\n",
+    "# ]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# metadatas = [\n",
+    "#     {\n",
+    "#         \"id\": listing[\"id\"],\n",
+    "#         \"location\": listing[\"location\"],\n",
+    "#         \"neighborhood\": listing[\"neighborhood\"],\n",
+    "#         \"property_type\": listing[\"property_type\"],\n",
+    "#         \"year_built\": listing[\"year_built\"],\n",
+    "#         \"price\": listing[\"price\"],\n",
+    "#         \"bedrooms\": listing[\"bedrooms\"],\n",
+    "#         \"bathrooms\": listing[\"bathrooms\"],\n",
+    "#         \"area_sqft\": listing[\"area_sqft\"],\n",
+    "#         \"listed_date\": listing[\"listed_date\"]\n",
+    "#     } for listing in real_estate_listings\n",
+    "# ]\n",
     "\n",
     "\n",
     "# Add to the collection\n",
     "collection.add(\n",
+    "    ids=ids,\n",
     "    documents=documents,\n",
     "    metadatas=metadatas,\n",
-    "    ids=ids\n",
     ")\n",
     "\n",
     "print(f\"Inserted {len(documents)} listings into Chroma collection '{collection_name}'\")\n"
@@ -436,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -492,18 +512,18 @@
       "text/plain": [
        "{'bedrooms': 4,\n",
        " 'bathrooms': 3,\n",
-       " 'property_type': 'suburban home',\n",
+       " 'property_type': 'Single Family Home',\n",
        " 'area_min_sqft': None,\n",
        " 'area_max_sqft': None,\n",
        " 'building_max_age': None,\n",
        " 'building_min_year': None,\n",
-       " 'amenities': ['large backyard', 'garage for two cars', 'modern kitchen'],\n",
+       " 'amenities': ['Large backyard', 'Garage for two cars', 'Modern kitchen'],\n",
        " 'furnished': False,\n",
-       " 'location': None,\n",
-       " 'neighborhood_features': ['safe', 'family-friendly', 'good schools nearby'],\n",
+       " 'location': 'Suburb',\n",
+       " 'neighborhood_features': ['Safe', 'Family-friendly', 'Good schools'],\n",
        " 'transportation': [],\n",
        " 'parking_required': True,\n",
-       " 'pet_friendly': False,\n",
+       " 'pet_friendly_required': False,\n",
        " 'min_budget': 500000,\n",
        " 'max_budget': 700000}"
       ]
@@ -536,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -591,29 +611,104 @@
     "building_max_age = content_dict['building_max_age']\n",
     "building_min_year = content_dict['building_min_year']\n",
     "\n",
-    "bedroom_conditions = ({\"bedrooms\": n_bedroom}, )\n",
-    "bathrooms_conditions = ({\"bathrooms\": {\"$gte\": n_bathroom - 1}}, {\"bathrooms\": {\"$lte\": n_bathroom + 1}})\n",
-    "budget_conditions = ({\"price\": {\"$gte\": min_budget}}, {\"bathrooms\": {\"$lte\": max_budget}})\n",
-    "area_conditions = ({\"area_sqft\": {\"$gte\": min_area}}, {\"area_sqft\": {\"$lte\": max_area}})\n",
-    "year_conditions = ({\"year_built\": {\"$gte\": building_min_year}}, {\"year_built\": {\"$gte\": current_year - building_max_age}})\n",
+    "conditions = []\n",
+    "if n_bedroom:\n",
+    "    conditions += [{\"bedrooms\": n_bedroom}]\n",
+    "if n_bathroom:\n",
+    "    conditions += [{\"bathrooms\": {\"$gte\": n_bathroom - 1}}, {\"bathrooms\": {\"$lte\": n_bathroom + 1}}]\n",
+    "if min_budget:\n",
+    "    conditions += [{\"price\": {\"$gte\": min_budget}}]\n",
+    "if max_budget:\n",
+    "    conditions += [{\"price\": {\"$lte\": max_budget}}]\n",
+    "if min_area:\n",
+    "    conditions += [{\"area_sqft\": {\"$gte\": min_area}}]\n",
+    "if max_area:\n",
+    "    conditions += [{\"area_sqft\": {\"$lte\": max_area}}]\n",
+    "if building_min_year:\n",
+    "    conditions += [{\"year_built\": {\"$gte\": building_min_year}}]\n",
+    "if building_max_age:\n",
+    "    conditions += [{\"year_built\": {\"$gte\": current_year - building_max_age}}]\n",
     "\n",
     "\n",
-    "{'bedrooms': 4,\n",
-    " 'bathrooms': 3,\n",
-    " 'property_type': 'suburban home',\n",
-    " 'area_min_sqft': None,\n",
-    " 'area_max_sqft': None,\n",
-    " 'building_max_age': None,\n",
-    " 'building_min_year': None,\n",
-    " 'amenities': ['large backyard', 'garage for two cars', 'modern kitchen'],\n",
-    " 'furnished': False,\n",
-    " 'location': None,\n",
-    " 'neighborhood_features': ['safe', 'family-friendly', 'good schools nearby'],\n",
-    " 'transportation': [],\n",
-    " 'parking_required': True,\n",
-    " 'pet_friendly': False,\n",
-    " 'min_budget': 500000,\n",
-    " 'max_budget': 700000}\n"
+    "\n",
+    "# {'bedrooms': 4,\n",
+    "#  'bathrooms': 3,\n",
+    "#  'property_type': 'suburban home',\n",
+    "#  'area_min_sqft': None,\n",
+    "#  'area_max_sqft': None,\n",
+    "#  'building_max_age': None,\n",
+    "#  'building_min_year': None,\n",
+    "#  'amenities': ['large backyard', 'garage for two cars', 'modern kitchen'],\n",
+    "#  'furnished': False,\n",
+    "#  'location': None,\n",
+    "#  'neighborhood_features': ['safe', 'family-friendly', 'good schools nearby'],\n",
+    "#  'transportation': [],\n",
+    "#  'parking_required': True,\n",
+    "#  'pet_friendly': False,\n",
+    "#  'min_budget': 500000,\n",
+    "#  'max_budget': 700000}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ids': [['2', '15', '29']],\n",
+       " 'embeddings': None,\n",
+       " 'documents': [['Spacious 4-Bedroom House with Garden. This spacious 4-bedroom, 3-bathroom house offers a large backyard perfect for outdoor activities, a renovated kitchen with modern finishes, and a 2-car garage. The open-concept living and dining area flows seamlessly into the backyard patio, ideal for entertaining. The master suite includes a walk-in closet and en-suite bathroom with a soaking tub and separate shower. Neighborhood info: Located in a quiet suburban neighborhood in Austin, TX, this house is close to excellent schools, parks, and shopping centers. The area is family-friendly with a tight-knit community and is just a short drive to downtown Austin for easy access to work and entertainment.. Location: Austin, TX, Neighborhood: Suburban. Type: House, Bedrooms: 4, Bathrooms: 3.0, Area: 2100 sqft, Year built: 2015, Price: $715000.',\n",
+       "   'Luxury 4-Bedroom Villa with Pool. This stunning 4-bedroom, 4-bathroom villa offers a spacious layout with high-end finishes, including marble floors, designer kitchen with premium appliances, and a large open living area with panoramic views. The outdoor space features a private pool, lush garden, and multiple terraces for relaxation and entertaining. Neighborhood info: Situated in an exclusive gated community in Miami, FL, this villa offers both privacy and luxury. The neighborhood is known for its upscale homes, top-rated golf courses, and proximity to the beach. Residents also enjoy convenient access to world-class shopping and dining.. Location: Miami, FL, Neighborhood: Gated Community. Type: Villa, Bedrooms: 4, Bathrooms: 4.0, Area: 4500 sqft, Year built: 2020, Price: $2200000.',\n",
+       "   'Luxury 4-Bedroom Home with Private Vineyard. This stunning 4-bedroom, 3.5-bathroom home includes a private vineyard, perfect for wine enthusiasts. The spacious home boasts a gourmet kitchen, an open-concept living area with vaulted ceilings, and a master suite with a private terrace. The outdoor space features a pool, hot tub, and multiple areas for relaxation and outdoor dining. Neighborhood info: Nestled in the rolling hills of Napa Valley, CA, this property offers both seclusion and access to world-class wineries. The neighborhood is known for its luxury estates, wineries, and scenic views, making it a sought-after location for those who appreciate fine wine and a tranquil lifestyle.. Location: Napa Valley, CA, Neighborhood: Vineyard Estate. Type: House, Bedrooms: 4, Bathrooms: 3.5, Area: 3500 sqft, Year built: 2018, Price: $3200000.']],\n",
+       " 'uris': None,\n",
+       " 'included': ['metadatas', 'documents', 'distances'],\n",
+       " 'data': None,\n",
+       " 'metadatas': [[{'property_type': 'House',\n",
+       "    'neighborhood': 'Suburban',\n",
+       "    'id': 2,\n",
+       "    'bathrooms': 3.0,\n",
+       "    'location': 'Austin, TX',\n",
+       "    'price': 715000,\n",
+       "    'listed_date': '2025-03-25',\n",
+       "    'area_sqft': 2100,\n",
+       "    'bedrooms': 4,\n",
+       "    'year_built': 2015},\n",
+       "   {'listed_date': '2025-04-09',\n",
+       "    'id': 15,\n",
+       "    'price': 2200000,\n",
+       "    'location': 'Miami, FL',\n",
+       "    'bedrooms': 4,\n",
+       "    'bathrooms': 4.0,\n",
+       "    'year_built': 2020,\n",
+       "    'area_sqft': 4500,\n",
+       "    'neighborhood': 'Gated Community',\n",
+       "    'property_type': 'Villa'},\n",
+       "   {'bedrooms': 4,\n",
+       "    'listed_date': '2025-04-18',\n",
+       "    'neighborhood': 'Vineyard Estate',\n",
+       "    'bathrooms': 3.5,\n",
+       "    'year_built': 2018,\n",
+       "    'property_type': 'House',\n",
+       "    'location': 'Napa Valley, CA',\n",
+       "    'price': 3200000,\n",
+       "    'id': 29,\n",
+       "    'area_sqft': 3500}]],\n",
+       " 'distances': [[1.0419951677322388, 1.0893641710281372, 1.1533079147338867]]}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "outputs = collection.query(\n",
+    "    query_texts=[query_text],\n",
+    "    where={\"$and\": conditions},\n",
+    "    n_results=3,\n",
+    ")\n",
+    "display(outputs)"
    ]
   },
   {
