--- a/main2.ipynb
+++ b/main2.ipynb
@@ -22,9 +22,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "collection_names: ['real_estate_listings_v2', 'real_estate_listings']\n",
-      "*** Create 'real_estate_listings_v3' collection ***\n",
-      "Number of Documents: 0\n",
+      "collection_names: ['real_estate_listings_v2', 'real_estate_listings', 'real_estate_listings_v3']\n",
+      "*** Get 'real_estate_listings_v3' collection ***\n",
+      "Number of Documents: 30\n",
       "No. of data: 30\n",
       "Number of Documents: 30\n"
      ]
@@ -40,7 +40,7 @@
     "\n",
     "\n",
     "\n",
-    "delete_flag = True\n",
+    "delete_flag = False\n",
     "verbose = True\n",
     "\n",
     "database = Database(persist_directory, collection_name, delete_flag=delete_flag, verbose=verbose)\n",
@@ -70,7 +70,9 @@
       "Buyer: A safe, family-friendly area with good schools nearby.\n",
       "Agent: Do you have a budget range in mind?\n",
       "Buyer: Somewhere between $500,000 and $700,000.\n",
-      "\n"
+      "\n",
+      "\n",
+      "========== Buyer Preferences ==========\n"
      ]
     },
     {
@@ -78,17 +80,17 @@
       "text/plain": [
        "{'bedrooms': 4,\n",
        " 'bathrooms': 3,\n",
-       " 'property_type': 'home',\n",
+       " 'property_type': None,\n",
        " 'area_min_sqft': None,\n",
        " 'area_max_sqft': None,\n",
        " 'building_max_age': None,\n",
        " 'building_min_year': None,\n",
-       " 'amenities': ['large backyard', 'garage for two cars', 'modern kitchen'],\n",
+       " 'amenities': ['Large backyard', 'Garage for two cars', 'Modern kitchen'],\n",
        " 'furnished': False,\n",
-       " 'location': 'suburban',\n",
-       " 'neighborhood_features': ['safe', 'family-friendly', 'good schools nearby'],\n",
+       " 'location': None,\n",
+       " 'neighborhood_features': ['Safe', 'Family-friendly', 'Good schools'],\n",
        " 'transportation': [],\n",
-       " 'parking_required': True,\n",
+       " 'parking_required': False,\n",
        " 'pet_friendly_required': False,\n",
        " 'min_budget': 500000,\n",
        " 'max_budget': 700000}"
@@ -98,16 +100,95 @@
      "output_type": "display_data"
     },
     {
-     "ename": "ValueError",
-     "evalue": "unexpected '{' in field name",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 8\u001b[0m\n\u001b[1;32m      4\u001b[0m n_results \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      7\u001b[0m conv \u001b[38;5;241m=\u001b[39m RealEstateConversations(conv_json_path, verbose\u001b[38;5;241m=\u001b[39mverbose)\n\u001b[0;32m----> 8\u001b[0m obj \u001b[38;5;241m=\u001b[39m \u001b[43mconv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_query_and_conditions\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconv_id\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m query_outputs \u001b[38;5;241m=\u001b[39m database\u001b[38;5;241m.\u001b[39mquery_db(\u001b[38;5;241m*\u001b[39mobj, n_results\u001b[38;5;241m=\u001b[39mn_results)\n\u001b[1;32m     10\u001b[0m database\u001b[38;5;241m.\u001b[39mdisplay_query_outputs(query_outputs)\n",
-      "File \u001b[0;32m~/Desktop/My Documents/Academic/Online Courses/Udacity Generative AI/Course 5 Building Generative AI Solutions/project_personalized-real-estate-agent/utils_2.py:169\u001b[0m, in \u001b[0;36mRealEstateConversations.get_query_and_conditions\u001b[0;34m(self, conv_id)\u001b[0m\n\u001b[1;32m    167\u001b[0m conversation_text \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_conversation_str(conv_id)\n\u001b[1;32m    168\u001b[0m buyer_prefs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_extract_preferences(conversation_text)\n\u001b[0;32m--> 169\u001b[0m query_text \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_query_text\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbuyer_prefs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    170\u001b[0m conditions \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_conditions(buyer_prefs)\n\u001b[1;32m    171\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m query_text, conditions\n",
-      "File \u001b[0;32m~/Desktop/My Documents/Academic/Online Courses/Udacity Generative AI/Course 5 Building Generative AI Solutions/project_personalized-real-estate-agent/utils_2.py:127\u001b[0m, in \u001b[0;36mRealEstateConversations._get_query_text\u001b[0;34m(self, prefs)\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_get_query_text\u001b[39m(\u001b[38;5;28mself\u001b[39m, prefs: BuyerPreferences):\n\u001b[1;32m    126\u001b[0m     buyer_preferences \u001b[38;5;241m=\u001b[39m prefs\u001b[38;5;241m.\u001b[39mmodel_dump()\n\u001b[0;32m--> 127\u001b[0m     query_text \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mQUERY_TEXT_TEMPLATE\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mformat\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mbuyer_preferences\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    128\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m query_text\n",
-      "\u001b[0;31mValueError\u001b[0m: unexpected '{' in field name"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "========== Query Text ==========\n",
+      "- Property type: None\n",
+      "- Amenities: Large backyard, Garage for two cars, Modern kitchen\n",
+      "- Furnished: No\n",
+      "- Location: Any\n",
+      "- Neighborhood features: Safe, Family-friendly, Good schools\n",
+      "- Transportation preferences: Any\n",
+      "- Parking required: No\n",
+      "- Pet friendly required: No\n",
+      "\n",
+      "========== Filter Conditions ==========\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'bedrooms': 4},\n",
+       " {'bathrooms': {'$gte': 2.0}},\n",
+       " {'bathrooms': {'$lte': 4.0}},\n",
+       " {'price': {'$gte': 500000}},\n",
+       " {'price': {'$lte': 700000}}]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[{'bedrooms': 4}, {'bathrooms': {'$gte': 2.0}}, {'bathrooms': {'$lte': 4.0}}, {'price': {'$gte': 500000}}, {'price': {'$lte': 1000000}}]\n",
+      "\n",
+      "========== Query Outputs ==========\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'ids': [['2']],\n",
+       " 'embeddings': None,\n",
+       " 'documents': [['Spacious 4-Bedroom House with Garden. This spacious 4-bedroom, 3-bathroom house offers a large backyard perfect for outdoor activities, a renovated kitchen with modern finishes, and a 2-car garage. The open-concept living and dining area flows seamlessly into the backyard patio, ideal for entertaining. The master suite includes a walk-in closet and en-suite bathroom with a soaking tub and separate shower. Neighborhood info: Located in a quiet suburban neighborhood in Austin, TX, this house is close to excellent schools, parks, and shopping centers. The area is family-friendly with a tight-knit community and is just a short drive to downtown Austin for easy access to work and entertainment.. Location: Austin, TX, Neighborhood: Suburban. Type: House, Bedrooms: 4, Bathrooms: 3.0, Area: 2100 sqft, Year built: 2015, Price: $715000.']],\n",
+       " 'uris': None,\n",
+       " 'included': ['metadatas', 'documents', 'distances'],\n",
+       " 'data': None,\n",
+       " 'metadatas': [[{'listed_date': '2025-03-25',\n",
+       "    'price': 715000,\n",
+       "    'bathrooms': 3.0,\n",
+       "    'location': 'Austin, TX',\n",
+       "    'bedrooms': 4,\n",
+       "    'id': 2,\n",
+       "    'neighborhood': 'Suburban',\n",
+       "    'title': 'Spacious 4-Bedroom House with Garden',\n",
+       "    'year_built': 2015,\n",
+       "    'property_type': 'House',\n",
+       "    'area_sqft': 2100,\n",
+       "    'neighborhood_description': 'Located in a quiet suburban neighborhood in Austin, TX, this house is close to excellent schools, parks, and shopping centers. The area is family-friendly with a tight-knit community and is just a short drive to downtown Austin for easy access to work and entertainment.',\n",
+       "    'description': 'This spacious 4-bedroom, 3-bathroom house offers a large backyard perfect for outdoor activities, a renovated kitchen with modern finishes, and a 2-car garage. The open-concept living and dining area flows seamlessly into the backyard patio, ideal for entertaining. The master suite includes a walk-in closet and en-suite bathroom with a soaking tub and separate shower.'}]],\n",
+       " 'distances': [[1.1384844779968262]]}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "========== Rank-1 ==========\n",
+      "Property ID: 2\n",
+      "Title: Spacious 4-Bedroom House with Garden\n",
+      "Description: This spacious 4-bedroom, 3-bathroom house offers a large backyard perfect for outdoor activities, a renovated kitchen with modern finishes, and a 2-car garage. The open-concept living and dining area flows seamlessly into the backyard patio, ideal for entertaining. The master suite includes a walk-in closet and en-suite bathroom with a soaking tub and separate shower.\n",
+      "Neighborhood Info: Located in a quiet suburban neighborhood in Austin, TX, this house is close to excellent schools, parks, and shopping centers. The area is family-friendly with a tight-knit community and is just a short drive to downtown Austin for easy access to work and entertainment.\n",
+      "Location: Austin, TX\n",
+      "Neighborhood: Suburban\n",
+      "Property Type: House\n",
+      "Year Built: 2015 CE\n",
+      "Price: $715,000\n",
+      "Bedrooms: 4\n",
+      "Bathroom: 3.0\n",
+      "Area: 2100 sq.ft.\n",
+      "Listed Date: 2025-03-25\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -120,61 +201,21 @@
     "\n",
     "conv = RealEstateConversations(conv_json_path, verbose=verbose)\n",
     "obj = conv.get_query_and_conditions(conv_id)\n",
+    "\n",
+    "a, b = obj\n",
+    "b[4]['price']['$lte'] = 1000000\n",
+    "\n",
+    "print(b)\n",
+    "print()\n",
+    "\n",
     "query_outputs = database.query_db(*obj, n_results=n_results)\n",
     "database.display_query_outputs(query_outputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9ad6d623",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Single '}' encountered in format string",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m text \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m- Location: \u001b[39m\u001b[38;5;124m{{\u001b[39m\u001b[38;5;124mlocation} if \u001b[39m\u001b[38;5;132;01m{location}\u001b[39;00m\u001b[38;5;124m else \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAny\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m}\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mtext\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mformat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlocation\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mAAAA\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[0;31mValueError\u001b[0m: Single '}' encountered in format string"
-     ]
-    }
-   ],
-   "source": [
-    "text = \"- Location: {{location} if {location} else 'Any'}\"\n",
-    "\n",
-    "print(text.format(location=\"AAAA\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "2dcc9a23",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "unexpected '{' in field name",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m text2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m- Pet friendly required: \u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mYes\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m if \u001b[39m\u001b[38;5;132;01m{pet_friendly_required}\u001b[39;00m\u001b[38;5;124m else \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNo\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m}\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mtext2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mformat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpet_friendly_required\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mA\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[0;31mValueError\u001b[0m: unexpected '{' in field name"
-     ]
-    }
-   ],
-   "source": [
-    "text2 = \"- Pet friendly required: {'Yes' if {pet_friendly_required} else 'No'}\"\n",
-    "print(text2.format(pet_friendly_required=\"A\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "9162039b",
+   "id": "56415d9f",
    "metadata": {},
    "outputs": [],
    "source": []
